--- a/VytheeFirst/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/VytheeFirst/WebApplication1/Views/Shared/_Layout.cshtml
@@ -48,9 +48,11 @@
     </div>
 
     <environment names="Development">
-        <script src="~/lib/jquery/dist/jquery.js"></script>
-        <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="~/lib/jquery/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/bootstrap.js"></script>
+        <script src="~/lib/angular/angular.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        
     </environment>
     <environment names="Staging,Production">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
